fix layout bug

--- a/condovision-webapp/src/components/layout/header/styles.module.css
+++ b/condovision-webapp/src/components/layout/header/styles.module.css
@@ -146,6 +146,7 @@
 			justify-self-end
 			h-24;
 		min-height: unset;
+		overflow-y: visible;
 		background-color: transparent;
 		transform: translateY(0%);
 	}
